--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,10 @@
     />
 
     <title>Vite + React</title>
+    <script
+      src="https://upload-widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
